padding-top pagina1

--- a/styles.css
+++ b/styles.css
@@ -455,6 +455,10 @@ ul {
     margin-bottom: 10px;
   }
 
+  #pagina1 {
+    padding-top: 120px;
+  }
+
   .aba {
     font-size: 1em;
     margin: 0.5em;
